Close account feature completed